--- a/pom.xml
+++ b/pom.xml
@@ -401,6 +401,16 @@
 		<!-- Smack Chat dependencies end -->
 
 
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.10.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.scala-lang</groupId>
+			<artifactId>scala-library</artifactId>
+			<version>2.10.4</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
