--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,85 @@
 		<apache.tiles>3.0.3</apache.tiles>
 		<spring.security.version>3.2.3.RELEASE</spring.security.version>
 	</properties>
- 
+<!-- <repositories>
+    <repository>
+        <id>java large file uploader repository</id>
+        <url>http://java-large-file-uploader.googlecode.com/svn/mvnrepo</url>
+</repository>
+ </repositories> -->
 	<dependencies>
+	
+<!-- 	<dependency>
+        <groupId>com.am</groupId>
+        <artifactId>java-large-file-uploader-war</artifactId>
+        <version>1.1.8</version>
+        <type>war</type>
+</dependency>
+<dependency>
+        <groupId>com.am</groupId>
+        <artifactId>java-large-file-uploader-jar</artifactId>
+        <version>1.1.8</version>
+</dependency> -->
+	<dependency>
+<groupId>com.sun.mail</groupId>
+<artifactId>javax.mail</artifactId>
+<version>1.5.1</version>
+</dependency>
+	<dependency>
+	<groupId>org.apache.pdfbox</groupId>
+	<artifactId>pdfbox</artifactId>
+	<version>1.8.8</version>
+</dependency>
+<dependency>
+	<groupId>org.apache.poi</groupId>
+	<artifactId>poi</artifactId>
+	<version>3.10.1</version>
+</dependency>
+<dependency>
+	<groupId>org.apache.poi</groupId>
+	<artifactId>poi-scratchpad</artifactId>
+	<version>3.10-FINAL</version>
+</dependency>
+<dependency>
+	<groupId>org.apache.poi</groupId>
+	<artifactId>poi-ooxml</artifactId>
+	<version>3.9</version>
+</dependency>
+
+<dependency>
+  <groupId>fr.opensagres.xdocreport</groupId>
+  <artifactId>org.apache.poi.xwpf.converter.xhtml</artifactId>
+  <version>1.0.0</version>
+</dependency>
+<dependency>
+	<groupId>org.apache.poi</groupId>
+	<artifactId>poi-scratchpad</artifactId>
+	<version>3.11</version>
+</dependency>
+<dependency>
+	<groupId>org.apache.tika</groupId>
+	<artifactId>tika-core</artifactId>
+	<version>1.7</version>
+</dependency>
+
+<dependency>
+	<groupId>org.apache.tika</groupId>
+	<artifactId>tika-parsers</artifactId>
+	<version>1.7</version>
+</dependency>
+
+
+	<dependency>
+  <groupId>fr.opensagres.xdocreport</groupId>
+  <artifactId>org.apache.poi.xwpf.converter.pdf</artifactId>
+  <version>1.0.0</version>
+</dependency>
+<dependency>
+	<groupId>org.apache.poi</groupId>
+	<artifactId>poi-examples</artifactId>
+	<version>3.11</version>
+</dependency>
+
 	 
 	<dependency>
 			<groupId>wsdl4j</groupId>
@@ -414,6 +491,16 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
+			<version>1.1.4.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>net.wimpi</groupId>
+			<artifactId>telnetd-x</artifactId>
+			<version>2.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-integration</artifactId>
 			<version>1.1.4.RELEASE</version>
 		</dependency>
 	</dependencies>
