--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
     <filter-name>springRequestFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  <filter>
+ <filter>
     <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
   </filter>
@@ -20,7 +20,7 @@
     <filter-name>springSecurityFilterChain</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
-  <filter>
+  <filter> 
     <filter-name>characterEncodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
     <init-param>
@@ -45,7 +45,7 @@
     <servlet-name>dispatcher</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
-  <servlet>
+<!--   <servlet>
     <servlet-name>dwr-invoker</servlet-name>
     <servlet-class>uk.ltd.getahead.dwr.DWRServlet</servlet-class>
     <init-param>
@@ -73,14 +73,16 @@
   <servlet-mapping>
     <servlet-name>dwr-invoker</servlet-name>
     <url-pattern>/dwr/*</url-pattern>
-  </servlet-mapping>
-  <context-param>
+  </servlet-mapping>-->
+  <context-param> 
     <param-name>contextConfigLocation</param-name>
     <param-value>
+    	<!-- classpath*:/META-INF/jlfu-web-fragment-context.xml -->
         /WEB-INF/dispatcher-servlet.xml
-        /WEB-INF/application-security.xml
+         /WEB-INF/application-security.xml 
      </param-value>
   </context-param>
+ 
   <context-param>
     <param-name>defaultHtmlEscape</param-name>
     <param-value>true</param-value>
@@ -88,4 +90,9 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  
+  <error-page>
+	<exception-type>java.lang.Exception</exception-type>
+	<location>/WEB-INF/view/jsp/generic_error.jsp</location>
+  </error-page>
 </web-app>
