--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,14 @@
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
   <filter>
+    <filter-name>noCacheFilter</filter-name>
+    <filter-class>edms.core.NoCacheFilter</filter-class>
+ </filter>
+ <filter-mapping>
+  <filter-name>noCacheFilter</filter-name>
+  <url-pattern>/*</url-pattern>
+ </filter-mapping>
+  <filter>
     <filter-name>springRequestFilter</filter-name>
     <filter-class>org.springframework.web.filter.RequestContextFilter</filter-class>
   </filter>
@@ -12,15 +20,15 @@
     <filter-name>springRequestFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
- <filter>
+<!--  <filter>
     <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>springSecurityFilterChain</filter-name>
     <url-pattern>/*</url-pattern>
-  </filter-mapping>
-  <filter> 
+  </filter-mapping> --> 
+  <filter>
     <filter-name>characterEncodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
     <init-param>
@@ -79,7 +87,6 @@
     <param-value>
     	<!-- classpath*:/META-INF/jlfu-web-fragment-context.xml -->
         /WEB-INF/dispatcher-servlet.xml
-         /WEB-INF/application-security.xml 
      </param-value>
   </context-param>
  
